@@ -171,6 +171,12 @@ AC_ARG_WITH(profile,
                   [(default=YES if Boehm-Weiser garbage collector used)]),
   [], [with_profile=yes])
 
+AC_ARG_WITH(fpe,
+  AS_HELP_STRING( [--with-fpe],
+                  [detect floating point exceptions]
+                  [(default=YES)]),
+  [], [with_fpe=yes])
+
 AC_ARG_ENABLE(unicode,
   AS_HELP_STRING( [--enable-unicode],
                   [enable support for unicode (default=NO)]),
@@ -413,6 +419,12 @@ AC_SUBST(SONAME2)
 AC_SUBST(SONAME1)
 AC_SUBST(SONAME)
 AC_SUBST(SONAME_LDFLAGS)
+
+dnl ----------------------------------------------------------------------
+dnl Deactivate floating point exceptions if asked to
+if test "${with_fpe}" != yes; then
+   AC_DEFINE(ECL_AVOID_FPE_H)
+fi
 
 dnl =====================================================================
 dnl Checks for header files
